--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ Flask-SQLAlchemy==3.1.1
 Werkzeug==3.0.1
 gunicorn==21.2.0
 python-dotenv==1.0.0
+
+# Testing dependencies (optional, only needed for development)
+pytest==7.4.3
+pytest-cov==4.1.0
+flake8==6.1.0
