--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "A simple single-page HTML site.",
   "main": "src/index.html",
   "scripts": {
-    "start": "open src/index.html"
+    "start": "open src/index.html",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "copyfiles -u 1 \"src/**/*\" dist"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "rimraf": "^6.1.2"
+  }
 }
